web3/src/css/Task.css
.task {
	display: flex;
	justify-content: center;
	width: 100%;
	margin-top: 30px;
}

.task .wrapper {
	min-width: 400px;
	width: 90%;
	margin-bottom: 150px;
}

.task .task-info {
	display: flex;
	flex-direction: row;
	gap: 30px;
}

@media only screen and (max-width: 550px) {
	.task .task-info {
		flex-direction: column-reverse;
		flex-wrap: wrap;
	}
}

.task .task-url {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.task .block-info {
	background-color: #fff;
	border-radius: 10px;
	margin-top: 30px;
	padding: 30px;
	width: 70%;
}
@media only screen and (max-width: 550px) {
	.task .block-info {
		display: flex;
		flex-direction: column;
		justify-content: center;
		text-align: center;
	}
}

@media only screen and (max-width: 550px) {
	.task .task-data {
		width: 100%;
		display: flex;
		flex-direction: column;
		justify-content: center;
		text-align: center;
	}
}

.task .block-contest {
	background-color: #fff;
	border-radius: 10px;
	margin-top: 30px;
	padding: 30px;
	width: 30%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 20px;
}
@media only screen and (max-width: 550px) {
	.task .block-contest {
		width: 70%;
	}
}

.task .tableboard {
	display: flex;
	flex-wrap: wrap;
	margin-top: 30px;
	display: flex;
	gap: 60px;
}

.task .listboard {
	display: flex;
	flex-direction: column;
	margin-top: 30px;
	display: flex;
	gap: 5px;
}

.task .pr {
	width: 20%;
	min-width: 300px;

	background-color: #fff;
	border-radius: 10px;
	padding: 20px;
}

.task .pr-id {
	font-weight: 700;
	font-size: 1.2rem;
}
.task .pr-name {
	width: 100%;
	font-weight: 700;
	font-size: 1.2rem;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
.task .pr-info {
	display: flex;
	gap: 5px;
	margin-bottom: 10px;
}
.task .pr-author {
	color: #3191ff;
}
.task .pr-repository {
	color: #3191ff;
}
.task .pr-contributors {
	margin-bottom: 10px;
}
.task .divider {
	background-color: #e4e4e4;
	height: 1px;
	width: 100%;
	margin-top: 20px;
	margin-bottom: 20px;
}

.task .pr-description {
	width: 100%;
	height: 20%;
	margin-top: 20px;
	margin-bottom: 10px;
	display: -webkit-box;
	-webkit-line-clamp: 3;
	-webkit-box-orient: vertical;
	overflow: hidden;
	text-overflow: ellipsis;
}
.task .pr-from {
	margin-bottom: 10px;
}

.task .block-input {
	width: 100%;
	background-color: #ececec;
	height: 30px;
	border: none;
	outline: none;
	margin-right: 10px;
	padding-left: 10px;
	padding-right: 10px;
}

.task .search-bar {
	width: 31%;


	background-color: #ececec;
	border: none;
	border-radius: 10px;
	padding-left: 10px;
	padding-right: 10px;
	display: flex;

	align-items: center;
}

.task .search-bar img {
	width: 18px;
	height: 18px;
}

.task .logo {
	width: 100px;
	height: 100px;
	border-radius: 10px;
}
@media only screen and (max-width: 550px) {
	.task .logo {
		width: 100%;
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
	}
}

.task .contest-logo {
	width: 100px;
	height: 100px;
	background-color: #ececec;
	border-radius: 10px;
}

.task .block-wrapper {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: 20px;
	margin-bottom: 20px;
}

.task .view-button {
	margin-top: 20px;

	width: 100%;

	height: 40px;
	border-radius: 10px;
	border: none;
	background-color: #3191ff;
	color: #fff;
	font-size: 16px;
	font-weight: 700;
	box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.2);
}

.task .contest-name {
	margin-bottom: -15px;
}

.task .contest-pool-value {
	margin-top: -20px;
	color: #22d1b2;
}

.task .view-button-wrapper {
	text-align: center;
	line-height: 40px;
	text-decoration: none;
}

.task .vote-status-header {
	display: flex;
	width: 100%;
	margin-right: 30px;
	justify-content: space-between;
	font-weight: 700;
}

.task .vote-status-match {
	display: flex;
	flex-direction: column;
	margin-bottom: 10px;
	margin-right: 30px;
	justify-content: space-between;
}

.task .vote-status .progress-bar {
	border-radius: 10px;
	width: 100%;
	background-color: #e5e5e5;
	margin-bottom: 20px;
	height: 10px;
}

.task .vote-status .progress-bar-status {
	width: 100%;
	border-radius: 10px;
	background-color: #10d654;
	margin-bottom: 20px;
	height: 10px;
}

.task .back-button {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 8px;
	width: 120px;
	height: 40px;
	background-color: #3191ff;
	border-radius: 10px;
	box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.2);
	font-weight: 700;
	color: #fff;
	margin-top: 20px;
	cursor: pointer;
	user-select: none;
}
.task .back-button img {
	width: 15px;
	height: 15px;
}

.task .list-pr {
	display: flex;

	min-width: 300px;
	background-color: #fff;
	border-radius: 10px;
	padding: 10px;
}

.task .list-pr-id {
	font-weight: 700;
	font-size: 1.2vw;
}

.task .list-pr-name {
	width: 100%;
	font-weight: 700;
	font-size: 1.2vw;
	white-space: pre-wrap;
}


@media only screen and (max-width: 1200px) {
	.task .list-pr-id {
		font-size: 1.8vw;
	}

	.task .list-pr-name {
		font-size: 1.8vw;
	}
}

@media only screen and (max-width: 800px) {
	.task .list-pr-id {
		font-size: 3vw;
	}

	.task .list-pr-name {
		font-size: 3vw;
	}
}

.task .list-pr-info {
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	gap: 5px;

	margin-right: 20px;
}
.task .nowrap {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	white-space: pre;
}
.task .list-pr-author {
	color: #3191ff;
}
.task .list-pr-repository {
	color: #3191ff;
}

.task .list-vote-status-header {
	display: flex;
	width: 100%;
	margin-right: 30px;
	justify-content: space-between;
	font-weight: 700;
}
@media only screen and (max-width: 800px) {
	.task .list-vote-status-header{
		width: auto;
	}
}

.task .list-vote-status-match {
	display: flex;
	flex-direction: column;
}

.task .reward-text {
	display: flex;
	flex-direction: row;
}
.task .reward-text span {
	margin-bottom: -5px;
	align-self: flex-end;
}

.task .vote-data {
	margin-left: 20px;
	width: 40%;
	display: flex;
	flex-direction: column;
}
.task .list-vote-status {
	display: flex;
	gap: 30px;
	min-width: 200px;
	flex-direction: row;
}
@media only screen and (max-width: 800px) {
	.task .list-vote-status{
		min-width: 130px;
		flex-direction: column;
	}
}

.task .list-vote-info {
	width: 100%;
}
.task .list-vote-status .list-progress-bar {
	border-radius: 10px;

	background-color: #e5e5e5;

	height: 10px;
}

.task .list-vote-status .list-progress-bar-status {

	border-radius: 10px;
	background-color: #10d654;
	height: 10px;
}

.task .list-view-button {

	margin-top: 20px;
	height: 30px;
	line-height: 30px;
	overflow: hidden;
	border-radius: 10px;
	border: none;
	background-color: #3191ff;
	color: #fff;
	font-size: 16px;
	font-weight: 700;
	box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.2);
}

.task .searchbar-toggle{
	display: flex;
	justify-content: space-between;
	margin-top: 60px;
	margin-bottom: 20px;
}
.task .toggle-button{
	display: flex;
	flex-direction: row;
	align-items: center;
	align-content: center;
	border-radius: 10px;

	
}

.task .tableview{
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
	padding: 10px;
	width: 30px;

}
.task .listview{
	border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
	padding: 10px;
	width: 30px;

}

.task .toggled{
	background-color: #386EAC;


}
.task .not-toggled{
	background-color: #0F253E;
}


.task .toggle-button img{
	width: 25px;
	height: 25px;
	margin-bottom: -5px;
}

